[package]
name = "blog-to-speech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.32.0-rc.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
teloxide = { version = "0.12.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15.0"
bytes = "1.6.0"
